--- a/Gun04/index.html
+++ b/Gun04/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Benim Sitem</title>
 </head>
+
 <body>
-    
+    <h1>Siteme Hoşgeldini</h1>
+    <h2>Sitemin İçeriği</h2>
+    <ul>
+        <li><a href="#hakkında">Hakkında</a></li>
+        <li><a href="#hobilerim">Hobilerim</a></li>
+        <li><a href="#projelerim">Projelerim</a></li>
+        <li><a href="#iletişim">İletişim</a></li>
+    </ul>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus excepturi consequatur mollitia vel, quae at deserunt tenetur vero nulla dolorum quis a et autem accusantium provident architecto deleniti? Iusto, harum!</p>
+    <form action="gonder.html">
+        <label for="ad">Adınız</label><br>
+        <input type="text" name="ad" id="ad"><br><br>
+        
+        <label for="mesaj">Mesajınız</label><br>
+        <textarea id="mesaj" name="" id="" cols="30" rows="4"></textarea><br>
+        <button>Gönder</button>
+    </form>
+    Her hakkı saklıdır &copy; 2024
 </body>
+
 </html>
