--- a/Gun04/index.html
+++ b/Gun04/index.html
@@ -17,12 +17,12 @@
         <li><a href="#iletişim">İletişim</a></li>
     </ul>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus excepturi consequatur mollitia vel, quae at deserunt tenetur vero nulla dolorum quis a et autem accusantium provident architecto deleniti? Iusto, harum!</p>
-    <form action="gonder.html">
+    <form action="gonder.html" method="post">
         <label for="ad">Adınız</label><br>
         <input type="text" name="ad" id="ad"><br><br>
         
         <label for="mesaj">Mesajınız</label><br>
-        <textarea id="mesaj" name="" id="" cols="30" rows="4"></textarea><br>
+        <textarea id="mesaj" name="mesaj" id="" cols="30" rows="4"></textarea><br>
         <button>Gönder</button>
     </form>
     Her hakkı saklıdır &copy; 2024
