--- a/Gun06/index.html
+++ b/Gun06/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>6 Gün</title>
+    <!-- external css -->
+    <link rel="stylesheet" href="style.css">
+    <!-- internal css -->  
+    <style>       
+        p{
+            background-color: violet;
+        }
+        
+    </style>
 </head>
 <body>
-    
+    <!-- inline css-->
+    <h1 style="color: red;">CSS Öğreniyorum.</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, esse.</p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, facilis suscipit?</p>
 </body>
 </html>
