--- a/Gun06/selectors.html
+++ b/Gun06/selectors.html
@@ -21,6 +21,20 @@
             content: "(OTOPARK)";
             font-weight: bold;
         }
+        /* immediate child */
+        div>p{
+            margin: 0 40px;
+            text-align: justify;
+            font-size: 80%;
+        }
+        div p{
+            font-family: "Comic Sans MS";
+        }
+        h1,h2{
+            background-color: rgb(255, 0, 0);
+            color: white;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -31,6 +45,25 @@
     <p>
         Eski kaynaklara, sikke ve yazıtlara göre Kütahya’nın antik dönemdeki adı “Kotiaeion” (Cotiaeion)'dur.[2] Ünlü Antik Çağ coğrafyacısı Strabon bu adın, “Kotys’in Kenti” anlamına geldiğini belirtmektedir. Kotys, Trakya’da yaşayan Odrisler’den olup, Romalılar’ın MS 38'de Anadolu’ya gönderdiği bir komutanın adıdır. Kütahya Arkeoloji Müzesi’nde bulunan bir sikkede bu ad “Koti” olarak geçmektedir. Kütahya adı, eskisine benzetilerek Türkler tarafından verilmiştir.[3] Şehrin nüfusu 2013 yılına göre 249.558'dir.1927'de 17.000 olan nüfusu, 1990'da 131.000'e, 2000'de 167.000'e, 2008'de 213.000'e 2010'da 235.000'e çıkmış, 2014'te 228.000'e düşmüştür. Kent'in günümüzdeki belli başlı görülmesi gerekli yerleri Kütahya Kalesi, Cumhuriyet Caddesi (Yeni adı Sevgi Yolu) kentin merkezinde bulunan simgesi haline gelmiş çiniden yapılmış olan Vazo ve tarihi Germiyan Sokağı, Saat Kulesi, Zafertepe Anıtı, Tarihi Hükûmet Konağı (şu an Adliye olarak kullanılmaktadır), Frig Vadileridir.
     </p>
+    <div>
+        <p>
+            Eski kaynaklara, sikke ve yazıtlara göre Kütahya’nın antik dönemdeki adı “Kotiaeion” (Cotiaeion)'dur.[2] Ünlü Antik Çağ coğrafyacısı Strabon bu adın, “Kotys’in Kenti” anlamına geldiğini belirtmektedir. Kotys, Trakya’da yaşayan Odrisler’den olup, Romalılar’ın MS 38'de Anadolu’ya gönderdiği bir komutanın adıdır.
+        </p>
+        <section>
+            <p>Kütahya Porselen Sunar...</p>
+        </section>
+    </div>
+    <div>
+        <table>
+            <tr>
+                <td>
+                    <p>
+                        Şehrin nüfusu 2013 yılına göre 249.558'dir.1927'de 17.000 olan nüfusu, 1990'da 131.000'e, 2000'de 167.000'e, 2008'de 213.000'e 2010'da 235.000'e çıkmış, 2014'te 228.000'e düşmüştür. Kent'in günümüzdeki belli başlı görülmesi gerekli yerleri Kütahya Kalesi, Cumhuriyet Caddesi (Yeni adı Sevgi Yolu) kentin merkezinde bulunan simgesi haline gelmiş çiniden yapılmış olan Vazo ve tarihi Germiyan Sokağı, Saat Kulesi, Zafertepe Anıtı, Tarihi Hükûmet Konağı (şu an Adliye olarak kullanılmaktadır), Frig Vadileridir.
+                    </p>
+                </td>
+            </tr>
+        </table>
+    </div>
     <h3>İlçeler</h3>
     <ul>
         <li>Merkez</li>
