--- a/Gun07/arkaplan2.html
+++ b/Gun07/arkaplan2.html
@@ -3,15 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <title>Arkaplan2</title>
     <style>
         body{
             background: url(deniz.jpg) fixed center;
             background-size: cover;
+            font-family: "Open sans";
+        }
+        div{
+            background-color: rgba(255, 255, 255, .2);
+            backdrop-filter: blur(3px);
+            font-size: 1.5em;
+            padding: 20px;
+            margin: 20px;
+            border-radius: 10px;
+            color: rgba(255, 255, 255, .9);
+            line-height: 1.5;
+            text-shadow: 1px 1px black;
+        }
+        h1{
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    
+    <div>
+        <h1>Lorem</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam ipsam blanditiis corporis labore commodi voluptates quis laudantium accusantium officia debitis, illo iste, eaque saepe quidem suscipit, magnam quam. Vel, adipisci?</p>
+        <p>Illo, eveniet iusto. Earum quidem dolor praesentium esse cumque illum dolorem asperiores mollitia omnis eveniet voluptates laborum excepturi iste consequuntur tempore explicabo harum dolore maiores quisquam, ratione quas incidunt iure?</p>
+        <p>Perspiciatis magnam, iste repellat reiciendis excepturi quos maiores iure perferendis incidunt veniam, dignissimos laudantium ad amet. Ea, facere aliquam. Possimus provident animi quasi cupiditate, aut velit vero repellendus quia neque.</p>
+    </div>
 </body>
 </html>
