--- a/Gun14/border.html
+++ b/Gun14/border.html
@@ -1,90 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Border</title>
+    <title>Borders</title>
     <style>
-        *{
-            box-sizing: border-box;
-        }
-        html, body{
+        html,
+        body {
             min-height: 100%;
         }
-        div{
+
+        body {
+            background-color: #4158D0;
+            background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+        }
+
+        * {
+            box-sizing: border-box;
+        }
+
+        div {
             margin-bottom: 10px;
         }
-        .kutu1{
-            height: 60px;
+
+        .kutu1 {
+            height: 50px;
+            /* border-width: 3px;
+            border-color: black;
+            border-style: solid; */
             border: 3px solid black;
         }
-        .kutu2{
+
+        .kutu2 {
             height: 100px;
             border-top: 5px dashed green;
             border-right: 10px dotted red;
             border-bottom: 15px double blue;
             border-left: 20px groove orange;
         }
-        .kutu3{
+
+        /* tamamı borderdan oluşsaydı ne olurdu? */
+        .kutu3 {
             width: 100px;
             height: 100px;
             border: 50px solid black;
-            border-color:yellow brown purple green ;
+            border-color: yellow brown purple green;
         }
-        .kutu4{
+
+        .kutu4 {
             width: 100px;
             height: 100px;
             border: 50px solid black;
-            border-color:transparent transparent turquoise turquoise ;
+            border-color: transparent transparent turquoise turquoise;
         }
-        body{
-            background-color: #4158D0;
-            background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
-        }
-        .kutu5{
+
+        .kutu5 {
             width: 100px;
             height: 100px;
-            border: 50px solid black;
-            border-color:transparent transparent purple transparent ;
+            border: 50px solid transparent;
             border-top-width: 0;
-            border-bottom-width:100px ;
+            border-bottom-width: 100px;
+            border-bottom-color: yellow;
         }
-        .kutu6{           
+
+        .kutu6 {
             height: 150px;
             border-style: solid;
             border-width: 10px 20px 30px 40px;
             border-radius: 10px;
-            border-color: red green blue yellow;           
+            border-color: red green blue yellow;
         }
-        .kutu7{           
+
+        .kutu7 {
             height: 150px;
-            background-color: blue;  
-            border-radius: 0px 20px 30px 80px;        
+            background-color: #8BC6EC;
+            background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+            border-radius: 0px 60px 30px 80px;
         }
-        .kutu8{           
+
+        .kutu8 {
             width: 100px;
             height: 100px;
             background-color: black;
-            border-radius: 50%;       
+            border-radius: 50%;
         }
-        .kutu9{
-            height: 120px;
-            border:30px solid transparent;
+
+        .kutu9 {
+            border: 20px solid transparent;
             border-image: url(cicek.png) 20 stretch;
             height: 120px;
         }
-        .kutu10{
-            background: linear-gradient(#cf6404, #f6c725);
 
-            border:10px solid transparent;
+        .kutu10 {
+            background: linear-gradient(135deg, #cf6404, #f6c725 20%, #cf6404 90%, #f6c725);
+            border: 15px solid transparent;
             border-image: url(cicek.png) 20 round;
             height: 120px;
-            border-image-outset: 10px;
             margin: 20px 10px;
-            background-clip: padding-box;
+            background-clip: padding-box; /* onur+chatgpt teşekkür */
         }
     </style>
 </head>
+
 <body>
     <div class="kutu10"></div>
     <div class="kutu9"></div>
@@ -97,4 +115,5 @@
     <div class="kutu2"></div>
     <div class="kutu1"></div>
 </body>
+
 </html>
