--- a/Gun16/jsgiris3.html
+++ b/Gun16/jsgiris3.html
@@ -35,6 +35,6 @@
         }
     </script>
     <br>
-    <button onclick="document.getElementById('kutu').style.width=100+'px';document.getElementById('kutu').style.height=100+'px';">Sıfırla</button>
+    <button onclick="document.getElementById('kutu').style.width=100+'px';document.getElementById('kutu').style.height=100+'px';document.getElementById('kutu').textContent='100';x=100">Sıfırla</button>
 </body>
 </html>
