--- a/Gun15/template.html
+++ b/Gun15/template.html
@@ -5,21 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Blog Template</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <style>
         *,
         *::before,
         *::after {
             box-sizing: border-box;
+            font-family: "Raleway", sans-serif;
         }
-
-        @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=SUSE:wght@100..800&display=swap');
-
         body {
             margin: 0px;
             background-color: #f1f1f1;
-            font-family: "Lato", sans-serif;
         }
-
+        body,h1,h2,h3,h4,h5{
+            font-family: "Raleway", sans-serif;
+        }
         header {
             margin: 1rem 0 2rem 0;
             text-align: center;
@@ -48,14 +51,14 @@
 
         .col1 {
             flex: 2;
-            margin: 0 1rem;         
+            margin: 0 1rem;
         }
 
         .col2 {
             flex: 1;
             margin: 0 1rem;
         }
-        
+
         .box {
             background-color: white;
             margin-bottom: 2rem;
@@ -63,6 +66,7 @@
             /* SİL */
             box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
             border-radius: 0.2rem;
+            padding-bottom: 1rem;
         }
 
         footer {
@@ -71,16 +75,33 @@
             background-color: #616161;
             margin-top: 1rem;
         }
-        div>img{
+
+        div>img {
             width: 100%;
         }
-
         /* 990 yap */
         @media(max-width:600px) {
             main {
                 flex-direction: column;
             }
         }
+        h3{
+            margin: 0px 1rem;
+            font-size: 24px;
+            font-weight: normalZ;
+        }
+        h5{
+            margin: 0px 1rem;
+            line-height: 3rem;
+            font-size: 18px;
+        }
+        p{
+            margin: 0rem 1rem;
+        }
+        h5>span{
+            font-weight: normal;
+        }
+       
     </style>
 </head>
 
@@ -95,9 +116,13 @@
         <div class="col1">
             <div class="box">
                 <img src="https://www.w3schools.com/w3images/woods.jpg" alt="">
-                <h2>TITLE HEADING</h2>
-                <h5>Title description</h5>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit veritatis consequuntur cum, quia eveniet dolorum unde totam culpa facere inventore id in odio aliquid tempore quos exercitationem dolorem placeat repellendus!</p>
+                <h3>TITLE HEADING</h3>
+                <h5>Title description,
+                    <span> April 7, 2014</span>
+                </h5>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit veritatis consequuntur cum,
+                    quia eveniet dolorum unde totam culpa facere inventore id in odio aliquid tempore quos
+                    exercitationem dolorem placeat repellendus!</p>
 
             </div>
             <div class="box"></div>
