--- a/Gun15/template.html
+++ b/Gun15/template.html
@@ -122,13 +122,6 @@
         h5>span {
             font-weight: 300;
         }
-
-
-
-        button:hover {
-            background-color: #ddd;
-        }
-
         .comment,
         .comment-count,
         .comment-count-badge {
@@ -265,6 +258,10 @@
             text-decoration: none;
             font-weight: 700;
         }
+        .button-and-comment-count>button:hover{
+            background-color: #ddd;
+        }
+
     </style>
 </head>
 
