--- a/Gun22/diziler.html
+++ b/Gun22/diziler.html
@@ -47,8 +47,11 @@
         apartman.splice(2,0,"sezai");
         ciz(apartman);
         /*
-            Bu ders saatinde neler yaptık:
-                1.dizi tanımladık.
+            // Sonraki derste neler yapacağız
+            // döngülerle dizi elemanlarına erişme(belki döngüler konusunda işlenebilir)
+            // dizi metotları
+            // dizilerle bir takım işlemler
+            // dizilerde nesne taşıma vs.
         */
     </script>
 </body>
