--- a/Gun26/04.html
+++ b/Gun26/04.html
@@ -2,46 +2,32 @@
  Önemli not: biri olur da html üzerinden sayıyı 10 yapmaya karar verirse
  program kendini ona göre adapte etsin. Yani tıklayınca 11 12 13 .. şeklinde 
  artsın. -->
-<!DOCTYPE html>
-<html lang="tr">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Görev 4</title>
-</head>
+ <button id="btn1">1</button>
+ <button id="btn2">100</button>
+ <button id="btn3">1000</button>
 
-<body>
-    <button id="btn1">1</button>
-    <button id="btn2">15</button>
-    <button id="btn3">100</button>
-    <script>
-        const btn1 = document.getElementById("btn1");
-        const btn2 = document.getElementById("btn2");
-        const btn3 = document.getElementById("btn3");
-        btn1.onclick = () => {
-            btn1.textContent = Number(btn1.textContent) + 1;
-        };
+ <script>
+    // faruk
+    const btn1 = document.getElementById("btn1");
+    const btn2 = document.getElementById("btn2");
+    const btn3 = document.getElementById("btn3");
 
-        btn2.onclick = function () {
-            this.textContent = Number(this.textContent) + 1;
-        };
+    btn1.onclick = function() {
+        btn1.textContent = Number(btn1.textContent) + 1;
+    }
 
-        function arttir() {
-            this.textContent = Number(this.textContent) + 1;
-        }
-        function arttir2() {
-            this.textContent = Number(this.textContent) + 1;
-        }
+    // this keyword'ünü eventler'de event'e konu olan
+    // elemente karşılık gelir ANCAK arrow function'da işe yaramaz
+    btn2.onclick = function() {
+        this.textContent = Number(this.textContent) + 1;
+    };
 
-        /*btn3.addEventListener("click",arttir);
-        btn3.addEventListener("click",arttir2);
-        btn3.onclick = arttir;
-        btn3.onclick = arttir2;*/
+    // isimli fonksiyon ile
+    function arttir() {
+        this.textContent = Number(this.textContent) + 1;
+    }
 
-        
-
-    </script>
-</body>
-
-</html>
+    // btn3.addEventListener("click", arttir);
+    btn3.onclick = arttir;
+ </script>
