--- a/Gun27/index.html
+++ b/Gun27/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yapılacaklar Uygulaması</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/5.3.3/yeti/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
     
 </head>
@@ -24,7 +25,7 @@
                 <input type="text" class="form-control form-control-lg" id="task" placeholder="Ne yapacaksın?">
             </div>
             <div class="col-auto">
-                <button type="submit" class="btn btn-lg btn-primary">Ekle</button>
+                <button type="submit" class="btn btn-lg btn-primary"><i class="fas fa-plus"></i></button>
             </div>
         </form>
 
