--- a/Gun29/OdevCozumu2.html
+++ b/Gun29/OdevCozumu2.html
@@ -94,11 +94,23 @@
             font-size: 2rem;
             padding: 2rem;
         }
+        .arkaDiv{
+            position: fixed;
+            z-index: -1;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: brown;
+            backdrop-filter: blur(10px); /* Buzlu cam efekti */
+            -webkit-backdrop-filter: blur(10px); /* Safari desteği */
+        }
     </style>
 </head>
 
 <body>
-
+    <div class="arkaDiv"></div>
     <div class="form-background">
             <form class="form" id="frm">
                 <h2 class="form-heading">Lütfen İsminizi Giriniz</h2>
